# comfyui-prompt-editor

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json  vitest.config.js
.github/workflows/: ci.yml  publish.yml  registry-health.yml
docs/: IMPLEMENTATION-PLAN.md
docs/blueprint/adrs/: 0001-adopt-typescript-bun-build.md  0002-consume-field-provider-registry.md
screenshots/: Dockerfile  README.md  capture.mjs  package.json  workflow.json
src/: index.ts
tests/: test_publish_hygiene.py
tests/js/: field-bus.test.js  lora-field.test.js  number-field.test.js  prompt-editor.test.js
web/js/: modal-fuzzy.js  modal-shell.js  prompt-editor.js
